# whirr

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  release-please-config.json
.github/workflows/: publish.yml  release-please.yml  rust-release.yml  tests.yml
docs/: README.md  architecture.md  cli-reference.md  getting-started.md  python-api.md  server-setup.md
src/whirr/: __init__.py  client.py  config.py  db.py  run.py  runner.py  sweep.py  system_metrics.py
src/whirr/ablate/: __init__.py  models.py
src/whirr/cli/: __init__.py  cancel.py  compare.py  dashboard.py  doctor.py  export.py  init_cmd.py  logs.py  main.py  retry.py  runs.py  server_cmd.py  status.py  submit.py  sweep.py  watch.py  worker.py
src/whirr/cli/ablate/: __init__.py  add.py  init_cmd.py  rank.py  run.py
src/whirr/dashboard/: __init__.py  server.py
src/whirr/dashboard/templates/: base.html  index.html  queue.html  run_detail.html  runs.html
src/whirr/dashboard/templates/partials/: jobs.html  recent_runs.html  stats.html  workers.html
src/whirr/models/: __init__.py  ablation.py  api.py  base.py  db.py  run.py
src/whirr/server/: __init__.py  app.py  models.py
tests/: __init__.py  conftest.py  test_ablate.py  test_cli.py  test_concurrency.py  test_db.py  test_integration.py  test_run.py  test_v02_features.py  test_v03_features.py  test_v03_server.py  test_v04_features.py
worker-rust/: Cargo.toml  Makefile  README.md
worker-rust/src/: client.rs  main.rs  runner.rs
