[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whirr"
dynamic = ["version"]
description = "Local experiment orchestration. Queue jobs, track metrics, wake up to results."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Syntropy Systems" }
]
keywords = ["ml", "experiment", "tracking", "orchestration", "wandb", "mlflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
]

[project.scripts]
whirr = "whirr.cli.main:app"

[project.urls]
Homepage = "https://github.com/SynotropySystems/whirr"
Repository = "https://github.com/SynotropySystems/whirr"
Issues = "https://github.com/SynotropySystems/whirr/issues"

[tool.hatch.version]
path = "src/whirr/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/whirr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
