[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whirr"
dynamic = ["version"]
description = "Local experiment orchestration. Queue jobs, track metrics, wake up to results."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Syntropy Systems" }
]
keywords = ["ml", "experiment", "tracking", "orchestration", "wandb", "mlflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
metrics = [
    "psutil>=5.9",
]
dashboard = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "jinja2>=3.1.0",
]
server = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "jinja2>=3.1.0",
    "psycopg2-binary>=2.9.0",
    "httpx>=0.25.0",
]
ablate = []
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
    "psutil>=5.9",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "jinja2>=3.1.0",
    "psycopg2-binary>=2.9.0",
    "httpx>=0.25.0",
]

[project.scripts]
whirr = "whirr.cli.main:app"

[project.urls]
Homepage = "https://github.com/syntropy-systems-oss/whirr"
Repository = "https://github.com/syntropy-systems-oss/whirr"
Issues = "https://github.com/syntropy-systems-oss/whirr/issues"

[tool.hatch.version]
path = "src/whirr/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/whirr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.basedpyright]
include = ["src"]
pythonVersion = "3.9"
typeCheckingMode = "standard"
# Disable deprecated warnings since we need Python 3.9 compatibility
reportDeprecated = false
# Allow Any for flexibility in JSON handling
reportExplicitAny = false
reportAny = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
# Typer uses function calls in defaults
reportCallInDefaultInitializer = false
# Private usage is intentional in some cases
reportPrivateUsage = false
# Unused call results are common with decorators
reportUnusedCallResult = false
