[package]
name = "whirr-worker"
version = "0.4.1"
edition = "2021"
description = "Lightweight worker for whirr GPU job orchestration"
license = "MIT"

[dependencies]
# CLI parsing - minimal, no proc macros needed at runtime
clap = { version = "4", features = ["derive", "env"] }

# HTTP client - blocking, no async runtime overhead
ureq = { version = "2", features = ["json"] }

# JSON serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Signal handling
ctrlc = "3"

# Logging
log = "0.4"
env_logger = "0.11"

# Hostname
hostname = "0.4"

# Unix-specific process management
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
panic = "abort"     # Smaller binary, no unwinding
strip = true        # Strip symbols
